# ModHost

./: .env.example  .gitignore  Cargo.toml  README.md  bun.lockb  config.pkl.example  diesel.toml  docker-compose.dev.yml  package.json  prometheus.dev.yaml
apps/astro/: Cargo.toml
apps/astro-migrator/: Cargo.toml
apps/astro-migrator/src/: main.rs  models.rs
apps/astro/src/: lib.rs  main.rs  tags.rs  vers.rs
apps/kjspkg/: Cargo.toml  README.md
apps/kjspkg-migrator/: Cargo.toml  README.md
apps/kjspkg-migrator/src/: data.rs  fetcher.rs  lib.rs  main.rs  migrator.rs  models.rs
apps/kjspkg/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: api.rs  glue.rs  lib.rs  logger.rs  macros.rs  server.rs  state.rs  ui.rs  worker.rs
apps/server/src/auth/: mod.rs
apps/server/src/middleware/: mod.rs
apps/server/src/middleware/logger/: macros.rs
apps/server/src/routes/: api.rs  mod.rs
apps/server/src/routes/auth/: callback.rs  login.rs  mod.rs
apps/server/src/routes/meta/: badge.rs  loaders.rs  mod.rs  tags.rs  vers.rs
apps/server/src/routes/pkg/: author.rs  gallery.rs  info.rs  mod.rs  search.rs  ver.rs
apps/server/src/routes/users/: info.rs  me.rs  mod.rs  pkg.rs
apps/server/src/util/: gallery.rs  mod.rs  sanitize.rs  scheme.rs  versions.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: auth.rs  config.rs  db.rs  lib.rs  meili.rs  storage.rs  ui.rs  util.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-core/src/error/: err.rs  mod.rs  util.rs
crates/axumite/: Cargo.toml
crates/axumite/src/: fail.rs  lib.rs  rejection.rs  socket.rs  upgrade.rs  util.rs
crates/db/: Cargo.toml
crates/db-util/: Cargo.toml
crates/db-util/src/: lib.rs  users.rs  vers.rs
crates/db/migrations/2025-01-08-185655_add_moderation/: down.sql  up.sql
crates/db/migrations/2025-01-08-191158_rename_all_to_project/: down.sql  up.sql
crates/db/migrations/2025-01-08-201418_add_moderators/: down.sql
crates/db/src/: gen_schema.rs  lib.rs
crates/db/src/models/: gallery.rs  manifest.rs  mod.rs  pkg.rs  pkg_author.rs  pkg_relation.rs  pkg_ver.rs  user.rs
crates/db/src/util/: gallery.rs  mod.rs  pkg.rs  sync.rs  token.rs  user.rs  ver.rs
crates/imghdr/src/: lib.rs  patterns.rs  std_ext.rs
crates/include_dir/src/: dir.rs  file.rs
crates/jsglue/src/: embedded.rs  handler.rs  macros.rs  router.rs  state.rs  util.rs
crates/jsglue/src/ws/: handler.rs  process.rs  route.rs
crates/modhost/: Cargo.toml
crates/modhost-auth/: Cargo.toml
crates/modhost-auth/src/: lib.rs
crates/modhost-badges/: Cargo.toml
crates/modhost-badges/src/: generator.rs  lib.rs  logo.rs  models.rs  routes.rs
crates/modhost-config/: Cargo.toml
crates/modhost-config/src/: admin.rs  auth.rs  config.rs  lib.rs  storage.rs  ui.rs  util.rs
crates/modhost-core/: Cargo.toml
crates/modhost-core/src/: info.rs  lib.rs  logger.rs  utoipa.rs
crates/modhost-core/src/error/: err.rs  mod.rs  util.rs
crates/modhost-db/: Cargo.toml
crates/modhost-db-util/: Cargo.toml
crates/modhost-db-util/src/: gallery.rs  lib.rs  moderation.rs  projects.rs  users.rs  vers.rs
crates/modhost-db/migrations/2025-01-08-173648_add_version_files/: down.sql  up.sql
crates/modhost-db/src/: lib.rs  schema.rs
crates/modhost-middleware/: Cargo.toml
crates/modhost-middleware/src/: lib.rs  scheme.rs
crates/modhost-router/: Cargo.toml
crates/modhost-router/src/: api.rs  lib.rs  openapi.rs
crates/modhost-router/src/admin/: add.rs  list.rs  mod.rs  remove.rs  stats.rs  stats_ws.rs
crates/modhost-router/src/admin/projects/: mod.rs
crates/modhost-router/src/admin/projects/versions/: mod.rs
crates/modhost-router/src/admin/users/: delete.rs  get.rs  list.rs  mod.rs
crates/modhost-router/src/auth/: callback.rs  login.rs  mod.rs
crates/modhost-router/src/meta/: badge.rs  loaders.rs  mod.rs  tags.rs  vers.rs
crates/modhost-router/src/moderation/: mod.rs  queue.rs
crates/modhost-router/src/pkg/: author.rs  gallery.rs  info.rs  mod.rs  search.rs  ver.rs
crates/modhost-router/src/projects/: create.rs  delete.rs  info.rs  mod.rs  search.rs  update.rs
crates/modhost-router/src/projects/authors/: add.rs  list.rs  mod.rs  remove.rs
crates/modhost-router/src/projects/gallery/: create.rs  delete.rs  download.rs  info.rs  list.rs  mod.rs  update.rs
crates/modhost-router/src/projects/versions/: create.rs  delete.rs  download.rs  info.rs  latest.rs  list.rs  mod.rs  update.rs
crates/modhost-router/src/users/: info.rs  me.rs  mod.rs  pkg.rs
crates/modhost-router/src/util/: mod.rs  stats.rs
crates/modhost-search/: Cargo.toml
crates/modhost-search/src/: facets.rs  index.rs  lib.rs  models.rs  search.rs  service.rs  setup.rs
crates/modhost-server-core/: Cargo.toml
crates/modhost-server-core/src/: github.rs  glue.rs  lib.rs  macros.rs  state.rs  worker.rs
crates/modhost-ui/: Cargo.toml
crates/modhost-ui/src/: bun.rs  lib.rs
crates/modhost/src/: lib.rs
crates/parse-wiki-text-2/src/: configuration.rs  external_link.rs  heading.rs  lib.rs  line.rs  parse.rs  redirect.rs  state.rs  table.rs  tag.rs  template.rs
crates/quickhost/: Cargo.toml
crates/quickhost/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: facets.rs  index.rs  models.rs  search.rs  service.rs  setup.rs
pkl/: ModHost.pkl
tools/deptools/: Cargo.toml
tools/deptools/src/: add.rs  cli.rs  lib.rs  main.rs  rm.rs  util.rs
ui/: package.json  svelte.config.js  tailwind.config.ts
ui/src/lib/: api.ts  config.ts  i18n.ts  meta.ts  state.ts  user.ts  vers.ts
ui/src/lib/api/: read.ts
ui/src/locales/: af-ZA.json  ar-SA.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-UD.json  en-US.json  en-alpha.json  es-ES.json  fi-FI.json  fr-FR.json  he-IL.json  hu-HU.json  it-IT.json  ja-JP.json  ko-KR.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/themes/: kjspkg.ts  murky.ts
(+90 files in other folders)
