[package]
name = "kjspkg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
flate2.workspace = true
modhost.workspace = true
modhost-db.workspace = true
quickhost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
