[package]
name = "modhost"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
jsglue.workspace = true
modhost-core = { workspace = true, features = ["axum", "glue", "logging", "tokio"] }
modhost-db.workspace = true
modhost-config.workspace = true
modhost-router.workspace = true
modhost-search.workspace = true
modhost-server-core.workspace = true
tokio.workspace = true
tracing.workspace = true
