[package]
name = "db-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app-core = { workspace = true, features = ["diesel", "diesel-async"] }
db.workspace = true
diesel.workspace = true
diesel-async.workspace = true
itertools.workspace = true
