[package]
name = "modhost-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
modhost-core = { workspace = true, features = ["reqwest"] }
modhost-db.workspace = true
