[package]
name = "modhost-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures.workspace = true
itertools.workspace = true
meilisearch-sdk.workspace = true
modhost-config.workspace = true
modhost-core = { workspace = true, features = ["anyhow", "chrono", "meilisearch", "utoipa"] }
modhost-db.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
